--- a/Week 3/week3.css
+++ b/Week 3/week3.css
@@ -7,7 +7,7 @@ font-family: Helvetica;
 .container{
 margin: 0 auto;
 width: 700px;
-background: #fff url(Alton-brown-onion-dip.jp) no-repeat top center;
+background: #fff url(http://altonbrown.com/wp-content/uploads/2015/09/alton-brown-onion-dip.jpg) no-repeat top center;
 padding-top: 150px;
 border-top: 10px solid #424242;
 }
